0.9.0/_sources/generated/statsmodels.regression.recursive_ls.RecursiveLSResults.rst.txt
statsmodels.regression.recursive_ls.RecursiveLSResults
======================================================

.. currentmodule:: statsmodels.regression.recursive_ls

.. autoclass:: RecursiveLSResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~RecursiveLSResults.aic
    
    
      ~RecursiveLSResults.bic
    
    
      ~RecursiveLSResults.bse
    
    
      ~RecursiveLSResults.conf_int
    
    
      ~RecursiveLSResults.cov_params
    
    
      ~RecursiveLSResults.cov_params_approx
    
    
      ~RecursiveLSResults.cov_params_oim
    
    
      ~RecursiveLSResults.cov_params_opg
    
    
      ~RecursiveLSResults.cov_params_robust
    
    
      ~RecursiveLSResults.cov_params_robust_approx
    
    
      ~RecursiveLSResults.cov_params_robust_oim
    
    
      ~RecursiveLSResults.cusum
    
    
      ~RecursiveLSResults.cusum_squares
    
    
      ~RecursiveLSResults.f_test
    
    
      ~RecursiveLSResults.fittedvalues
    
    
      ~RecursiveLSResults.forecast
    
    
      ~RecursiveLSResults.get_forecast
    
    
      ~RecursiveLSResults.get_prediction
    
    
      ~RecursiveLSResults.hqic
    
    
      ~RecursiveLSResults.impulse_responses
    
    
      ~RecursiveLSResults.info_criteria
    
    
      ~RecursiveLSResults.initialize
    
    
      ~RecursiveLSResults.llf
    
    
      ~RecursiveLSResults.llf_obs
    
    
      ~RecursiveLSResults.load
    
    
      ~RecursiveLSResults.loglikelihood_burn
    
    
      ~RecursiveLSResults.normalized_cov_params
    
    
      ~RecursiveLSResults.plot_cusum
    
    
      ~RecursiveLSResults.plot_cusum_squares
    
    
      ~RecursiveLSResults.plot_diagnostics
    
    
      ~RecursiveLSResults.plot_recursive_coefficient
    
    
      ~RecursiveLSResults.predict
    
    
      ~RecursiveLSResults.pvalues
    
    
      ~RecursiveLSResults.remove_data
    
    
      ~RecursiveLSResults.resid
    
    
      ~RecursiveLSResults.resid_recursive
    
    
      ~RecursiveLSResults.save
    
    
      ~RecursiveLSResults.simulate
    
    
      ~RecursiveLSResults.summary
    
    
      ~RecursiveLSResults.t_test
    
    
      ~RecursiveLSResults.t_test_pairwise
    
    
      ~RecursiveLSResults.test_heteroskedasticity
    
    
      ~RecursiveLSResults.test_normality
    
    
      ~RecursiveLSResults.test_serial_correlation
    
    
      ~RecursiveLSResults.tvalues
    
    
      ~RecursiveLSResults.wald_test
    
    
      ~RecursiveLSResults.wald_test_terms
    
    
      ~RecursiveLSResults.zvalues
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~RecursiveLSResults.recursive_coefficients
      ~RecursiveLSResults.use_t
   
   