v0.15.0/_sources/generated/statsmodels.regression.recursive_ls.RecursiveLSResults.rst.txt
statsmodels.regression.recursive\_ls.RecursiveLSResults
=======================================================

.. currentmodule:: statsmodels.regression.recursive_ls

.. autoclass:: RecursiveLSResults
   :exclude-members: append,apply,conf_int,cov_params,extend,f_test,forecast,get_forecast,get_prediction,get_smoothed_decomposition,impulse_responses,info_criteria,initialize,load,news,normalized_cov_params,plot_cusum,plot_cusum_squares,plot_diagnostics,plot_recursive_coefficient,predict,remove_data,save,simulate,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~RecursiveLSResults.append
      ~RecursiveLSResults.apply
      ~RecursiveLSResults.conf_int
      ~RecursiveLSResults.cov_params
      ~RecursiveLSResults.extend
      ~RecursiveLSResults.f_test
      ~RecursiveLSResults.forecast
      ~RecursiveLSResults.get_forecast
      ~RecursiveLSResults.get_prediction
      ~RecursiveLSResults.get_smoothed_decomposition
      ~RecursiveLSResults.impulse_responses
      ~RecursiveLSResults.info_criteria
      ~RecursiveLSResults.initialize
      ~RecursiveLSResults.load
      ~RecursiveLSResults.news
      ~RecursiveLSResults.normalized_cov_params
      ~RecursiveLSResults.plot_cusum
      ~RecursiveLSResults.plot_cusum_squares
      ~RecursiveLSResults.plot_diagnostics
      ~RecursiveLSResults.plot_recursive_coefficient
      ~RecursiveLSResults.predict
      ~RecursiveLSResults.remove_data
      ~RecursiveLSResults.save
      ~RecursiveLSResults.simulate
      ~RecursiveLSResults.summary
      ~RecursiveLSResults.t_test
      ~RecursiveLSResults.t_test_pairwise
      ~RecursiveLSResults.test_heteroskedasticity
      ~RecursiveLSResults.test_normality
      ~RecursiveLSResults.test_serial_correlation
      ~RecursiveLSResults.wald_test
      ~RecursiveLSResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~RecursiveLSResults.aic
      ~RecursiveLSResults.aicc
      ~RecursiveLSResults.bic
      ~RecursiveLSResults.bse
      ~RecursiveLSResults.centered_tss
      ~RecursiveLSResults.cov_params_approx
      ~RecursiveLSResults.cov_params_oim
      ~RecursiveLSResults.cov_params_opg
      ~RecursiveLSResults.cov_params_robust
      ~RecursiveLSResults.cov_params_robust_approx
      ~RecursiveLSResults.cov_params_robust_oim
      ~RecursiveLSResults.cusum
      ~RecursiveLSResults.cusum_squares
      ~RecursiveLSResults.ess
      ~RecursiveLSResults.fittedvalues
      ~RecursiveLSResults.hqic
      ~RecursiveLSResults.llf
      ~RecursiveLSResults.llf_obs
      ~RecursiveLSResults.llf_recursive
      ~RecursiveLSResults.llf_recursive_obs
      ~RecursiveLSResults.loglikelihood_burn
      ~RecursiveLSResults.mae
      ~RecursiveLSResults.mse
      ~RecursiveLSResults.mse_model
      ~RecursiveLSResults.mse_resid
      ~RecursiveLSResults.mse_total
      ~RecursiveLSResults.pvalues
      ~RecursiveLSResults.recursive_coefficients
      ~RecursiveLSResults.resid
      ~RecursiveLSResults.resid_recursive
      ~RecursiveLSResults.rsquared
      ~RecursiveLSResults.sse
      ~RecursiveLSResults.ssr
      ~RecursiveLSResults.states
      ~RecursiveLSResults.tvalues
      ~RecursiveLSResults.uncentered_tss
      ~RecursiveLSResults.use_t
      ~RecursiveLSResults.zvalues
   
   
   